--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,11 @@
+<div class="items-search">
+  <%= form_tag('/search', method: "get") do %>
+    <%= label_tag(:q, "Search for  product review:") %>
+    <%= text_field_tag(:q) %>
+    <%= submit_tag("Search") %>
+  <% end %>
+</div>
+
 <div class="item-reviews">
   <h1>Total Search Results: <%= @items['Items']['TotalResults'] %></h1><hr>
   <% @items['Items']['Item'].each do |item| %>
