integrating search with parser module

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,1 +1,9 @@
-<%= render @items %>
+<div class="item-reviews">
+  <h1>Total Search Results: <%= @items['Items']['TotalResults'] %></h1><hr>
+  <% @items['Items']['Item'].each do |item| %>
+  <% if item['CustomerReviews']['HasReviews'] == 'true' %>
+  <h3><%= item['ItemAttributes']['Title'] %></h3>
+  <iframe src="<%= item['CustomerReviews']['IFrameURL'] %>"</iframe>
+	  <% end %>
+	  <% end %>
+</div>
