integrated bootstrap, fixed AWSProductParser and made it a model

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,3 +1,16 @@
+<div class="container ">
+  <h1>Product Tracker</h1>
+  <div class="items-search">
+    <%= form_tag('/search', method: "get") do %>
+    <%= label_tag(:q, "Search for  product review") %><br>
+    <%= text_field_tag(:q) %>
+    <%= submit_tag("Search") %>
+    <% end %>
+  </div>
+</div>
+
+
+
 <div class="item-reviews">
   <h1>Total Search Results: <%= @items['Items']['TotalResults'] %></h1><hr>
   <% @items['Items']['Item'].each do |item| %>
