--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,9 +1,12 @@
-<div class="items-search">
-  <%= form_tag('/search', method: "get") do %>
-    <%= label_tag(:q, "Search for  product review:") %>
+
+<div class="container ">
+  <h1>Product Tracker</h1>
+  <div class="items-search">
+    <%= form_tag('/search', method: "get") do %>
+    <%= label_tag(:q, "Search for  product review") %><br>
     <%= text_field_tag(:q) %>
     <%= submit_tag("Search") %>
-  <% end %>
+    <% end %>
+  </div>
 </div>
-
 
