add AWSReviewParser to scrape iFrame content with nokogiri

--- a/app/views/search/_results.html.erb
+++ b/app/views/search/_results.html.erb
@@ -1,10 +1,18 @@
 <div class="item-reviews">
-  <h1>Total Search Results: <%= @items['Items']['TotalResults'] %></h1><hr>
-  <% @items['Items']['Item'].each do |item| %>
-      <% if item['CustomerReviews']['HasReviews'] == 'true' %>
-        <img src="<%= item['MediumImage']['URL'] %>" alt="<%= item['ItemAttributes']['Title'] %>" />
-        <h3><%= item['ItemAttributes']['Title'] %></h3>
-        <iframe src="<%= item['CustomerReviews']['IFrameURL'] %>"</iframe>
-      <% end %>
+  <h1>Total Search Results: <%= @results[:search_results] %></h1><hr>
+  <% @results[:items].each do |item| %>
+    <img src="<%= item[:image_url] %>">
+    <h3><%= item[:title] %></h3>
+
+    <% item[:reviews].each.with_index(1) do |review, i| %>
+      <h4><%= i %>) <%= review[:title] %></h4>
+      <p>Rating: <%= review[:rating] %></p>
+      <p>Author: <%= review[:author] %></p>
+      <p>Usefulness: <%= review[:votes] %></p>
+      <p>Published: <%= review[:date] %></p>
+      <hr>
+      <p><%= review[:content] %></p>
+      <hr>
+    <% end %>
   <% end %>
 </div>
