integrated the analyzer with the review parser and added it to the view

--- a/app/views/search/_results.html.erb
+++ b/app/views/search/_results.html.erb
@@ -11,6 +11,10 @@
       <p>Usefulness: <%= review[:votes] %></p>
       <p>Published: <%= review[:date] %></p>
       <hr>
+  <p>The most negative sentence of the review: <%= review[:low_sentence] %></p>
+      <p>The most positive sentence of the review: <%= review[:high_sentence] %></p>
+      <p>The overall sentinment of the review: <%= review[:overall_sentiment] %></p>
+
       <p><%= review[:content] %></p>
       <hr>
     <% end %>
