fixing views for positive/negtive reviews

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -25,7 +25,9 @@ iframe {
   margin: 25px auto;
 }
 
-.negative-review,
-.postive-review{
-  display: none;
+.negative-review {
+  color: red;
+}
+.positive-review {
+  color: green;
 }
