--- a/app/views/search/_results.html.erb
+++ b/app/views/search/_results.html.erb
@@ -11,9 +11,15 @@
       <p>Usefulness: <%= review[:votes] %></p>
       <p>Published: <%= review[:date] %></p>
       <hr>
-  <div class='negative-review'><p>The most negative sentence of the review: <%= review[:low_sentence] %></p></div>
-  <div class='positive-review'><p>The most positive sentence of the review: <%= review[:high_sentence] %></p></div>
-  <div class='overall'><p data-overall="<%= review[:overall_sentiment] %>">The overall sentinment of the review: <%= review[:overall_sentiment] %></p></div>
+      <% if review[:overall_sentiment] == :negative %>
+        <div class='negative-review' style='color:red'><p>The most negative sentence of the review: <%= review[:low_sentence] %></p></div>
+        <div class='overall' style='color:red'>The overall sentinment of the review: <%= review[:overall_sentiment] %></p></div>
+      <% else %>
+        <div class='positive-review'style='color:green'><p>The most positive sentence of the review: <%= review[:high_sentence] %></p></div>
+        <div class='overall' style='color:green'>The overall sentinment of the review: <%= review[:overall_sentiment] %></p></div>
+      <% end %>
+
+
 
       <p><%= review[:content] %></p>
       <hr>
