fixed some commenting on the application erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-// <script>
+<script>
 //     $(document).ready(function(){
 //       if ($(".overall p").attr('data-overall') == "positive" ){
 //         debugger;
@@ -19,7 +19,7 @@
 //         $(".positive-review").show();
 //       }
 //     });
-// </script>
+</script>
 
 <%= yield %>
 
