move parsers to concerns and change to modules and extract location data

--- a/app/views/search/_results.html.erb
+++ b/app/views/search/_results.html.erb
@@ -8,6 +8,7 @@
       <h4><%= i %>) <%= review[:title] %></h4>
       <p>Rating: <%= review[:rating] %></p>
       <p>Author: <%= review[:author] %></p>
+      <p>Location: <%= review[:author_location] %></p>
       <p>Usefulness: <%= review[:votes] %></p>
       <p>Published: <%= review[:date] %></p>
       <hr>
