--- a/app/views/search/_results.html.erb
+++ b/app/views/search/_results.html.erb
@@ -6,7 +6,7 @@
     <input type="hidden" value="<%= item %>" >
   <div class="col-lg-3 col-md-4 col-xs-6 thumb" style="overflow:hidden;height:260px;min-width:300px;">
     <input type="image" class="thumbnail" src="<%= item[:image_url] %>" style="height:220px;width:100%;min-width:300px;min-height:100px;padding-bottom:0px;margin-bottom:5px;">
-    <p style="font-size:11px"><%= item[:title] %></p>
+    <p style="font-size:11px"><%= item[:title].truncate(55, separator: ' ', omission: '... (continued)') %></p>
   </div>
   </form>
   <% end %>
