fixed results view added if clause in case the search returns a product that doesn't exist

--- a/app/views/search/_results.html.erb
+++ b/app/views/search/_results.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
-  <% @products.each do |product| %>
+    <% @products.each do |product| %>
+    <% if product %>
     <form method="get" action="/results">
       <input type="hidden" name="product[id]" value="<%= product.id %>" >
       <input type="hidden" name="product[title]" value="<%= product.title %>" >
@@ -10,6 +11,7 @@
         <p style="font-size:11px"><%= product.title %></p>
       </div>
     </form>
+    <% end %>
   <% end %>
   </div>
 </div>
