adding new navbar for search and calling header partial only in application layout

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,10 +1,20 @@
-<div class="container ">
+<!-- <div class="container ">
   <h1>Product Tracker</h1>
   <div class="items-search">
-    <%= form_tag('/search', method: "get") do %>
-    <%= label_tag(:q, "Search for product review") %><br>
+    <%= form_tag('/search', method: "get", ) do %>
     <%= text_field_tag(:q) %>
     <%= submit_tag("Search") %>
     <% end %>
   </div>
 </div>
+</nav> -->
+
+
+<nav class="navbar">
+  <form class="navbar-form navbar-left" role="search" method ="get" action="/search">
+    <div class="form-group">
+      <input type="text" class="form-control" placeholder="Search" name="q">
+    </div>
+    <button type="submit" class="btn btn-default">Submit</button>
+  </form>
+</nav>
