--- a/app/views/search/_reviews.html.erb
+++ b/app/views/search/_reviews.html.erb
@@ -1,15 +1,15 @@
-    <img src="<%= @product[:image_url] %>">
-    <h3><%= @product[:title] %></h3>
+    <img src="<%= @product.image_url %>">
+    <h3><%= @product.title %></h3>
 <div class="review">
-    <% @product[:reviews].each.with_index(1) do |review, i| %>
-      <h4><%= i %>) <%= review[:title] %></h4>
-      <p>Rating: <%= review[:rating] %></p>
-      <p>Author: <%= review[:author] %></p>
-      <p>Location: <%= review[:author_location] %></p>
-      <p>Usefulness: <%= review[:votes] %></p>
-      <p>Published: <%= review[:date] %></p>
+    <% @reviews.each.with_index(1) do |review, i| %>
+      <h4><%= i %>) <%= review.title %></h4>
+      <p>Rating: <%= review.rating %></p>
+      <p>Author: <%= review.author.name %></p>
+      <p>Location: <%= review.author.location %></p>
+      <p>Usefulness: <%= review.votes %></p>
+      <p>Published: <%= review.date %></p>
       <hr>
-      <% if review[:overall_sentiment] == "negative." %>
+      <% if review.overall_sentiment == "negative." %>
         <div class='negative-review' style='color:red'><p>The most negative sentence of the review: <%= review[:low_sentence] %></p></div>
         <div class='overall' style='color:red'>The overall sentinment of the review: <%= review[:overall_sentiment] %></p></div>
       <% else %>
@@ -19,7 +19,7 @@
 
 
 
-      <p><%= review[:content] %></p>
+      <p><%= review.content %></p>
       <hr>
       <% end %>
       </div>
