integrated database with dashboard erb

--- a/app/views/search/_dashboard.html.erb
+++ b/app/views/search/_dashboard.html.erb
@@ -8,13 +8,13 @@
       </div>
       <div class="span4">
 	Worst Review:<br>
-	<%= @dasbhoard[:worst_review]%>
+	<%= @dashboard[:worst_review]%>
       </div>
       <div class="span4">
 	Best Sentence:<br>
-	<%= @dasbhoard[:best_sentence]%>
+	<%= @dashboard[:best_sentence]%>
 	Worst Sentence:<br>
-	<%= @dasbhoard[:worst_sentence]%>
+	<%= @dashboard[:worst_sentence]%>
       </div>
     </div>
   </div>
