--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -11,7 +11,7 @@
 
 
 <nav class="navbar">
-  <form class="navbar-form navbar-left" role="search" method ="get" action="/search">
+  <form class="navbar-form navbar-left" role="search" method ="get" action="<%= products_path %>">
     <div class="form-group">
       <input type="text" class="form-control" placeholder="Search" name="q">
     </div>
