working on building map hash #wip

--- a/app/views/products/_map.html.erb
+++ b/app/views/products/_map.html.erb
@@ -167,8 +167,7 @@ require_relative 'elections.json'
     // Then returning the corresponding president
     // who won that state, from the array we made earlier
     $.each(state_data, function(key, data){
-      debugger;
-      if(<% @product.reviews.author.location %> == abbr){
+      if(var map_data == abbr){
         state_review = data.review.author_location;
       }
     })
