--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,20 +1,13 @@
-<!-- <div class="container ">
-  <h1>Product Tracker</h1>
-  <div class="items-search">
-    <%= form_tag('/search', method: "get", ) do %>
-    <%= text_field_tag(:q) %>
-    <%= submit_tag("Search") %>
-    <% end %>
-  </div>
-</div>
-</nav> -->
-
-
-<nav class="navbar">
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+  <div class="navbar-header">
+  <p class="navbar-left navbar-brand">Product Tracker</p>
   <form class="navbar-form navbar-left" role="search" method ="get" action="<%= products_path %>">
     <div class="form-group">
       <input type="text" class="form-control" placeholder="Search" name="q">
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
+  </div>
+  </div>
 </nav>
