--- a/app/views/products/_dashboard.html.erb
+++ b/app/views/products/_dashboard.html.erb
@@ -1,21 +1,40 @@
-<div class="row-fluid">
-  <div class="span12">
-    Sentiment Review Data
-    <div class="row-fluid">
-      <div class="span4">
-	Best Review:<br>
-	<%= @dashboard[:best_review]%>
+<div class="row">
+  <div class="col-lg-3"><img class="img-rounded" src="<%= @product.image_url %>"></div>
+  <div class="col-lg-8"><h2><%= @product.title %></h2></div>
+</div>
+
+<br>
+<br>
+
+<div class="panel panel-default">
+  <div class="panel-heading panel-title">Sentiment Review Data</div>
+  <div class="panel-body">
+    <div class="row">
+      <div class="col-md-3">
+	<div class="panel panel-success">
+	  <div class="panel-heading panel-title">Best Review</div>
+	  <div class="panel-body"><%= @dashboard[:best_review]%></div>
+	</div>
       </div>
-      <div class="span4">
-	Worst Review:<br>
-	<%= @dashboard[:worst_review]%>
+      <div class="col-md-3">
+	<div class="panel panel-success">
+	  <div class="panel-heading panel-title">Best Sentence</div>
+	  <div class="panel-body"><%= @dashboard[:best_sentence]%></div>
+	</div>
       </div>
-      <div class="span4">
-	Best Sentence:<br>
-	<%= @dashboard[:best_sentence]%>
-	Worst Sentence:<br>
-	<%= @dashboard[:worst_sentence]%>
+      <div class="col-md-3">
+	<div class="panel panel-danger">	  
+	  <div class="panel-heading panel-title">Worst Review</div>
+	  <div class="panel-body"><%= @dashboard[:worst_review]%></div>
+	</div>
+      </div>
+      <div class="col-md-3">
+	<div class="panel panel-danger">
+	  <div class="panel-heading panel-title">Worst Sentence</div>
+	  <div class="panel-body"><%= @dashboard[:worst_sentence]%></div>
+	</div>
       </div>
     </div>
   </div>
 </div>
+
