--- a/app/views/products/_reviews.html.erb
+++ b/app/views/products/_reviews.html.erb
@@ -1,25 +1,28 @@
-    <img src="<%= @product.image_url %>">
-    <h3><%= @product.title %></h3>
-<div class="review">
+<div class="panel panel-default">
+  <div class="panel-heading panel-title">Reviews</div>
+  <div class="panel-body">
     <% @reviews.each.with_index(1) do |review, i| %>
-      <h4><%= i %>) <%= review.title %></h4>
-      <p>Rating: <%= review.rating %></p>
-      <p>Author: <%= review.author.name %></p>
-      <p>Location: <%= review.author.location %></p>
-      <p>Usefulness: <%= review.votes %></p>
-      <p>Published: <%= review.date %></p>
-      <hr>
-      <% if review.overall_sentiment == "negative." %>
-        <div class='negative-review' style='color:red'><p>The most negative sentence of the review: <%= review[:low_sentence] %></p></div>
-        <div class='overall' style='color:red'>The overall sentinment of the review: <%= review[:overall_sentiment] %></p></div>
-      <% else %>
-        <div class='positive-review'style='color:green'><p>The most positive sentence of the review: <%= review[:high_sentence] %></p></div>
-        <div class='overall' style='color:green'>The overall sentinment of the review: <%= review[:overall_sentiment] %></p></div>
-      <% end %>
+    
+    <h4><%= i %>) <%= review.title %></h4>
+    <p>Rating: <%= review.rating %></p>
+    <p>Author: <%= review.author.name %></p>
+    <p>Location: <%= review.author.location %></p>
+    <p>Usefulness: <%= review.votes %></p>
+    <p>Published: <%= review.date %></p>
+    <hr>
+    <% if review.overall_sentiment == "negative." %>
+    <div class='negative-review' style='color:red'><p>The most negative sentence of the review: <%= review[:low_sentence] %></p></div>
+    <div class='overall' style='color:red'>The overall sentinment of the review: <%= review[:overall_sentiment] %></p></div>
+<% else %>
+<div class='positive-review'style='color:green'><p>The most positive sentence of the review: <%= review[:high_sentence] %></p></div>
+<div class='overall' style='color:green'>The overall sentinment of the review: <%= review[:overall_sentiment] %></p></div>
+<% end %>
 
 
 
-      <p><%= review.content %></p>
-      <hr>
-      <% end %>
-      </div>
+<p><%= review.content %></p>
+<hr>
+<% end %>
+</div>
+</div>
+</div>
