--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -7,8 +7,23 @@ overflow:hidden;
 }
 
 img.img-rounded {
-max-height:300px;
+max-height:200px;
 max-width:300px;
+}
+
+.panel-body {
+font-size:12px;
+}
+
+.row-centered {
+text-align:center;
+}
+
+.col-centered {
+display:inline-block;
+float:none;
+text-align:left;
+margin-right:-4px;
 }
 
 
