--- a/app/views/products/_dashboard.html.erb
+++ b/app/views/products/_dashboard.html.erb
@@ -7,6 +7,15 @@
 <br>
 
 <div class="panel panel-default">
+  <div class="panel-heading panel-title">User Data</div>
+  <div class="panel-body row-centered">
+    <div id="user-data-panel" class="col-centered">
+      <input id="user-data-button" type="button" value="Click here for user data">
+    </div>
+  </div>
+</div>
+
+<div class="panel panel-default">
   <div class="panel-heading panel-title">Sentiment Review Data</div>
   <div class="panel-body">
     <div class="row">
@@ -38,3 +47,8 @@
   </div>
 </div>
 
+<div class="panel panel-default">
+  <div class="panel-heading panel-title">Rating Over Time</div>
+  <div id="graph1" class="panel-body row-centered">
+  </div>
+</div>
