--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
   <div class="navbar-header">
-  <p class="navbar-left navbar-brand">Product Tracker</p>
+  <p class="navbar-left navbar-brand"><a href="/">Product Tracker</a></p>
   <form class="navbar-form navbar-left" role="search" method ="get" action="<%= products_path %>">
     <div class="form-group">
       <input type="text" class="form-control" placeholder="Search" name="q">
