--- a/app/views/products/_results.html.erb
+++ b/app/views/products/_results.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="row">
+    <%= "Sorry, there were no results for your search!" if @products==[] %>
     <% @products.each do |product| %>
       <% if product %>
         <div class="col-lg-3 col-md-4 col-xs-6 thumb" style="overflow:hidden;height:260px;min-width:300px;">
@@ -13,4 +14,4 @@
   </div>
 </div>
 
-<!-- style="height:220px;width:100%;min-width:300px;min-height:100px;padding-bottom:0px;margin-bottom:5px;" -->
+
