--- a/app/views/products/_reviews.html.erb
+++ b/app/views/products/_reviews.html.erb
@@ -6,6 +6,8 @@
     <h4><%= i %>) <%= review.title %></h4>
     <p>Rating: <%= review.rating %></p>
     <p>Usefulness: <%= review.votes %></p>
+    <p>Author: <%= review.author_name %></p>
+    <div class="author_url"><%= review.author_url %></div>
     <p>Published: <%= review.date %></p>
     <hr>
     <% if review.overall_sentiment == "negative." %>
