omg ajax works omg

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -26,7 +26,13 @@ text-align:left;
 margin-right:-4px;
 }
 
-.author_url {
+#author_urls {
 display:none;
 }
+
+#review_ids {
+display:none;
+}
+
+
 
