--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
   <%= render 'dashboard' %>
   <%= render 'reviews' %>
-</div>
+  <%= render partial: 'authors', :formats => [:js], layout: false %>
+ </div>
