--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -16,7 +16,9 @@
 $body-bg: #ecf0f1
 $navbar-inverse-bg: #27ae60
 $navbar-inverse-link-color: white
-$brand-primary: #f39c12
+$brand-primary: #08306B
+$pannel-primary: #08306B
+
 $jumbotron-bg: #bdc3c7
 @import "bootstrap-sprockets"
 @import "bootstrap"
