update graph product list styles and move controller methods into product model

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -4,7 +4,7 @@
   <p class="navbar-left navbar-brand"><a href="/">Product Tracker</a></p>
   <form class="navbar-form navbar-left" role="search" method ="get" action="<%= products_path %>">
     <div class="form-group">
-      <input type="text" class="form-control" placeholder="Search" name="q">
+      <input type="text" class="form-control" placeholder="Search" name="product[q]">
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
