--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -30,3 +30,18 @@ margin-right:-4px;
 display:none;
 }
 
+.card {
+  overflow: hidden;
+  border-radius: 5px;
+  background: #fafafa;
+  margin-bottom: 20px;
+}
+
+.product-description-text {
+  padding: 5px 0 5px 10px;
+}
+
+.card img {
+  width: 300px;
+  height: 300px;
+}
