make slider appear again and moving map on dashboard

--- a/app/views/products/_dashboard.html.erb
+++ b/app/views/products/_dashboard.html.erb
@@ -1,6 +1,7 @@
 
 <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
 <div class="row">
   <div class="col-lg-3"><img class="img-rounded" src="<%= @product.image_url %>"></div>
   <div class="col-lg-8"><h2><%= @product.title %></h2></div>
@@ -18,10 +19,10 @@
   </div>
 </div>
 
-<div class="panel panel-default">
+<!-- <div class="panel panel-default">
   <div class="panel-heading panel-title">User Map</div>
   <div id="graph1" class="panel-body row-centered" style="display:none;">
-    <%= render 'map' %>
+    <%# render 'map' %>
     <script>
       $(function() {
         $( "#slider" ).slider();
@@ -29,7 +30,7 @@
     </script>
     <div id="slider"></div>
   </div>
-</div>
+</div> -->
 
 
 <div class="panel panel-default">
