map shows upon button click below user data

--- a/app/views/products/_dashboard.html.erb
+++ b/app/views/products/_dashboard.html.erb
@@ -19,18 +19,19 @@
   </div>
 </div>
 
-<!-- <div class="panel panel-default">
+
+<div id="graph1" class="panel panel-default" style="display:none;">
   <div class="panel-heading panel-title">User Map</div>
-  <div id="graph1" class="panel-body row-centered" style="display:none;">
-    <%# render 'map' %>
+  <div class="panel-body row-centered" >
+    <%= render 'map' %>
     <script>
       $(function() {
-        $( "#slider" ).slider();
+      $( "#slider" ).slider();
       });
     </script>
     <div id="slider"></div>
   </div>
-</div> -->
+</div>
 
 
 <div class="panel panel-default">
@@ -83,22 +84,10 @@
           <%= render 'graph_sentiment_pie' %>
         </div>
       </div>
+    </div>
 </div>
 
 <div class="panel panel-default">
   <div class="panel-heading panel-title">Map Place Holder</div>
-  <div id="graph1" class="panel-body row-centered">
-    <%= render 'map' %>
-  </div>
-  <div class="panel-body">
-    <script>
-      $(function() {
-        $( "#slider" ).slider({
-          change: function( event, ui ) {debugger;}
-        });
-
-      });
-    </script>
-    <div id="slider"></div>
   </div>
 </div>
