--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,13 +1,11 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
-  <div class="navbar-header">
-  <p class="navbar-left navbar-brand"><a href="/">Product Tracker</a></p>
-  <form class="navbar-form navbar-left" role="search" method ="get" action="<%= products_path %>">
-    <div class="form-group">
-      <input type="text" class="form-control" placeholder="Search" name="product[q]">
+    <div class="navbar-header">
+      <p class="navbar-left navbar-brand"><a href="/">Product Tracker</a></p>
+      <%= form_tag(products_path, method: 'get', class: 'navbar-form navbar-left') do %>
+        <%= text_field_tag 'product[q]', nil, placeholder: 'Search', class: 'form-control' %>
+        <%= submit_tag 'Submit', class: 'btn btn-default' %>
+      <% end %>
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
-  </form>
-  </div>
   </div>
 </nav>
