--- a/app/views/products/_map.html.erb
+++ b/app/views/products/_map.html.erb
@@ -7,7 +7,7 @@
   <div class="map">
   <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 
-    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="960" height="593">
+    <svg id="map" xmlns="http://www.w3.org/2000/svg" version="1.1" viewbox="0 0 960 593" width="700" height="500">
 
     <style type="text/css">
     .state
