--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,11 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<%= render 'header' %>
-
+  <%= render 'header' %>
 <body>
-  <%= yield %>
+  <div class="page-wrapper">
+    <%= yield %>
+  </div>
 </body>
+  <%= render 'footer' %>
 </html>
