--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -19,8 +19,8 @@ $navbar-inverse-link-color: white
 $brand-primary: #08306B
 $pannel-primary: #08306B
 $jumbotron-bg: #bdc3c7
+$input-border-focus: #08306B
 @import "bootstrap-sprockets"
 @import "bootstrap"
-@import font-awesome
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300)
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,600,300,200)
