--- a/app/views/products/_results.html.erb
+++ b/app/views/products/_results.html.erb
@@ -3,13 +3,15 @@
     <%= "Sorry, there were no results for your search!" if @products==[] %>
       <% @products.each do |product| %>
         <% if product %>
-        <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+        <div class="col-lg-3 col-md-4 col-xs-6">
           <div class="card">
-            <%= link_to product do %>
-              <%= image_tag(product.image_url, class: 'img-responsive card-img-top') %>
-            <% end %>
+            <div class="card-image-container">
+              <%= link_to product do %>
+                <%= image_tag(product.image_url) %>
+              <% end %>
+            </div>
             <div class="card-block product-description-text">
-              <h5 class="card-title"><%= truncate(product.title, length: 35) %></h5>
+              <h5 class="card-title"><%= truncate(product.title, length: 55) %></h5>
               <p class="card-subtitle text-muted"><%= product.product_group %> - <%= number_to_currency(product.price, precision: 0) %></p>
             </div>
           </div>
