--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -19,8 +19,23 @@ $navbar-inverse-link-color: white
 $brand-primary: #08306B
 $pannel-primary: #08306B
 $jumbotron-bg: #bdc3c7
-$input-border-focus: #08306B
 @import "bootstrap-sprockets"
 @import "bootstrap"
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900)
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300)
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,600,300,200)
+@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700)
+
+body
+  font-family: 'Roboto', 'Helvetica', 'sans-serif'
+  color: #444
+
+h1, h2, h3
+  font-family: 'Roboto', 'Helvetica', 'sans-serif'
+  font-weight: 100
+
+h4, h5, h6
+  font-weight: 400
+
+.footer
+  text-align: center
+  padding: 10px
