--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,3 +1,7 @@
+.page-wrapper {
+  padding-top: 80px;
+}
+
 .row .panel {
   height: 400px;
   overflow: scroll;
@@ -44,9 +48,12 @@ text-align: center;
 }
 
 input.home-search-input {
-  padding: 35px 40px 35px 15px;
-  font-size: 2.5em;
+  padding: 25px 40px 25px 15px;
+  font-size: 1.5em;
   border-radius: 5px;
+  font-weight: 100;
+  width: 75%;
+  margin: 0 auto;
 }
 
 .home-search {
@@ -57,14 +64,18 @@ input.home-search-input {
 }
 
 .home-jumbo-text h1 {
-  font-size: 3.5em;
-  font-weight: 300;
+  font-size: 3em;
 }
 
 .home-jumbo-text {
-  margin-bottom: 50px;
+  margin-bottom: 40px;
 }
 
-.page-wrapper {
-  padding-top: 80px;
+.home-header {
+  background: none !important;
+  border: none !important;
+}
+
+.product-dashboard-image {
+  height: 20%;
 }
