--- a/app/views/products/_dashboard.html.erb
+++ b/app/views/products/_dashboard.html.erb
@@ -3,12 +3,46 @@
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
 <div class="row">
-  <div class="col-lg-3"><img class="img-rounded" src="<%= @product.image_url %>"></div>
-  <div class="col-lg-8"><h2><%= @product.title %></h2></div>
+  <div class="col-lg-3"><img class="img-rounded img-responsive product-dashboard-image" src="<%= @product.image_url %>"></div>
+  <div class="col-lg-9"><h1><%= @product.title %></h1></div>
+  <div class="col-lg-9"><h3><%= @product.product_group %> - <%= number_to_currency(@product.price, precision: 0) %></h3></div>
+  <div class="col-lg-9"><h4>Manufacturered by <%= @product.manufacturer %></h4></div>
 </div>
 
 <br>
 <br>
+
+<div class="panel panel-default">
+  <div class="panel-heading panel-title">Sentiment Review Data</div>
+  <div class="panel-body">
+    <div class="row">
+      <div class="col-md-3">
+	<div class="panel panel-primary">
+	  <div class="panel-heading panel-title">Best Review</div>
+	  <div class="panel-body"><%= @dashboard[:best_review]%></div>
+	</div>
+      </div>
+      <div class="col-md-3">
+	<div class="panel panel-primary">
+	  <div class="panel-heading panel-title">Best Sentence</div>
+	  <div class="panel-body"><%= @dashboard[:best_sentence]%></div>
+	</div>
+      </div>
+      <div class="col-md-3">
+	<div class="panel panel-warning">
+	  <div class="panel-heading panel-title">Worst Review</div>
+	  <div class="panel-body"><%= @dashboard[:worst_review]%></div>
+	</div>
+      </div>
+      <div class="col-md-3">
+	<div class="panel panel-warning">
+	  <div class="panel-heading panel-title">Worst Sentence</div>
+	  <div class="panel-body"><%= @dashboard[:worst_sentence]%></div>
+	</div>
+      </div>
+    </div>
+  </div>
+</div>
 
 <div class="panel panel-default">
   <div class="panel-heading panel-title">User Data</div>
@@ -45,36 +79,4 @@
         </div>
       </div>
     </div>
-</div>
-
-<div class="panel panel-default">
-  <div class="panel-heading panel-title">Sentiment Review Data</div>
-  <div class="panel-body">
-    <div class="row">
-      <div class="col-md-3">
-	<div class="panel panel-primary">
-	  <div class="panel-heading panel-title">Best Review</div>
-	  <div class="panel-body"><%= @dashboard[:best_review]%></div>
-	</div>
-      </div>
-      <div class="col-md-3">
-	<div class="panel panel-primary">
-	  <div class="panel-heading panel-title">Best Sentence</div>
-	  <div class="panel-body"><%= @dashboard[:best_sentence]%></div>
-	</div>
-      </div>
-      <div class="col-md-3">
-	<div class="panel panel-warning">
-	  <div class="panel-heading panel-title">Worst Review</div>
-	  <div class="panel-body"><%= @dashboard[:worst_review]%></div>
-	</div>
-      </div>
-      <div class="col-md-3">
-	<div class="panel panel-warning">
-	  <div class="panel-heading panel-title">Worst Sentence</div>
-	  <div class="panel-body"><%= @dashboard[:worst_sentence]%></div>
-	</div>
-      </div>
-    </div>
-  </div>
 </div>
