--- a/app/views/search/_header.html.erb
+++ b/app/views/search/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top home-header">
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="<%= root_path %>" >
