add tons of styling to application and fix parser errors

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -14,28 +14,40 @@
  *= require_self
  */
 $body-bg: #ecf0f1
-$navbar-inverse-bg: #27ae60
+$navbar-inverse-bg: #444
 $navbar-inverse-link-color: white
 $brand-primary: #08306B
 $pannel-primary: #08306B
 $jumbotron-bg: #bdc3c7
 @import "bootstrap-sprockets"
 @import "bootstrap"
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900)
-@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300)
-@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700)
+@import "font-awesome"
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,300,400,700)
+@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700)
 
 body
   font-family: 'Roboto', 'Helvetica', 'sans-serif'
   color: #444
 
-h1, h2, h3
-  font-family: 'Roboto', 'Helvetica', 'sans-serif'
+body#homepage
+  // background: url('https://images.unsplash.com/uploads/14131528357928cb9c5b5/220ec369?q=80&fm=jpg&s=116c62656b83d67a67c63bc473b0f288') no-repeat center center fixed
+  // -webkit-background-size: cover
+  // -moz-background-size: cover
+  // -o-background-size: cover
+  // background-size: cover
+  // https://images.unsplash.com/uploads/1413395496082cbc91228/43e39040?q=80&fm=jpg&s=ef4acb9f201cc553006a568c8b616165
+
+  // https://images.unsplash.com/36/X7L5hgFXQZazzPaK3goC_14084990857_88cabf3b6d_o.jpg?q=80&fm=jpg&s=24483760876f49ba7ed460c10807f555
+
+  // https://images.unsplash.com/uploads/14131528357928cb9c5b5/220ec369?q=80&fm=jpg&s=116c62656b83d67a67c63bc473b0f288
+  // https://images.unsplash.com/photo-1428452932365-4e7e1c4b0987?q=80&fm=jpg&s=65ec6a6b5ce90c1448e0760e0eb2d467
+
+h1
   font-weight: 100
 
-h4, h5, h6
+h2, h3, h4, h5, h6
   font-weight: 400
 
 .footer
   text-align: center
-  padding: 10px
+  padding: 12px 10px 0px 10px
