--- a/app/views/products/_authors.js.erb
+++ b/app/views/products/_authors.js.erb
@@ -6,9 +6,8 @@ var ready = function(){
 	urls_from_html.pop();
 	ids_from_html.pop();
 
-
 	$('#user-data-button').click(function(){
-		$('#user-data-panel').html('<%= image_tag "ajax-loader.gif" %>');
+		$('#user-data-panel').html('<div class="throbber-loader">Loading...</div><h5>Loading...</h5>');
 		$.ajax({
 			'url': '/author-data',
 			'type':	'POST',
@@ -19,7 +18,7 @@ var ready = function(){
 
 			}).done(function(map_data) {
 			if (map_data.status == 500) {
-			   $('#user-data-panel').html("There was an error loading user data.");
+			   $('#user-data-panel').html("<h4>There was an error loading user data.</h4>");
 			}
 			else {
 
@@ -48,10 +47,10 @@ var ready = function(){
 			   }
 
 			   buildMap(rating_hash);
-			   $('#graph1').show();
+			   $('#graph1').slideDown();
 			   }
 
-			   $('#user-data-panel').html(map_data.length.toString() + " users were loaded. " + (Object.keys(rating_hash).length-1).toString() + " listed their location. The average rating for the group that did not specify their location is " + (rating_hash["Not Specified"]*5).toString().substring(0,3) + ".");
+			   $('#user-data-panel').html("<h4>" + map_data.length.toString() + " users were loaded. " + (Object.keys(rating_hash).length-1).toString() + " listed their location. The average rating for the group that did not specify their location is " + (rating_hash["Not Specified"]*5).toString().substring(0,3) + ".</h4>");
 			});
 	});
 
