--- a/app/views/products/_dashboard.html.erb
+++ b/app/views/products/_dashboard.html.erb
@@ -2,73 +2,78 @@
 <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
-<div class="row">
-  <div class="col-lg-3"><img class="img-rounded img-responsive product-dashboard-image" src="<%= @product.image_url %>"></div>
-  <div class="col-lg-9"><h1><%= @product.title %></h1></div>
-  <div class="col-lg-9"><h3><%= @product.product_group %> - <%= number_to_currency(@product.price, precision: 0) %></h3></div>
-  <div class="col-lg-9"><h4>Manufacturered by <%= @product.manufacturer %></h4></div>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="dashboard-image-container">
+          <img class="img-rounded img-responsive product-dashboard-image" src="<%= @product.image_url %>">
+        </div>
+      </div>
+      <div class="col-lg-8">
+        <h1><%= truncate(@product.title, length: 150) %></h1>
+        <h4><%= @product.product_group %> - <%= number_to_currency(@product.price, precision: 0) %></h4>
+        <h5>Manufactured by <strong><%= @product.manufacturer %></strong></h5>
+      </div>
+    </div>
+  </div>
 </div>
 
-<br>
-<br>
-
 <div class="panel panel-default">
-  <div class="panel-heading panel-title">Sentiment Review Data</div>
+  <div class="panel-heading panel-title">Review Summary<div class="toggle pull-right"><i class="fa fa-toggle-on"></i></div></div>
   <div class="panel-body">
     <div class="row">
       <div class="col-md-3">
-	<div class="panel panel-primary">
-	  <div class="panel-heading panel-title">Best Review</div>
-	  <div class="panel-body"><%= @dashboard[:best_review]%></div>
-	</div>
+      	<div class="panel panel-primary">
+      	  <div class="panel-heading panel-title">Best Review</div>
+      	  <div class="panel-body"><%= @dashboard[:best_review]%></div>
+      	</div>
       </div>
       <div class="col-md-3">
-	<div class="panel panel-primary">
-	  <div class="panel-heading panel-title">Best Sentence</div>
-	  <div class="panel-body"><%= @dashboard[:best_sentence]%></div>
-	</div>
+      	<div class="panel panel-primary">
+      	  <div class="panel-heading panel-title">Best Sentence</div>
+      	  <div class="panel-body"><%= @dashboard[:best_sentence]%></div>
+      	</div>
       </div>
       <div class="col-md-3">
-	<div class="panel panel-warning">
-	  <div class="panel-heading panel-title">Worst Review</div>
-	  <div class="panel-body"><%= @dashboard[:worst_review]%></div>
-	</div>
+      	<div class="panel panel-warning">
+      	  <div class="panel-heading panel-title">Worst Review</div>
+      	  <div class="panel-body"><%= @dashboard[:worst_review]%></div>
+      	</div>
       </div>
       <div class="col-md-3">
-	<div class="panel panel-warning">
-	  <div class="panel-heading panel-title">Worst Sentence</div>
-	  <div class="panel-body"><%= @dashboard[:worst_sentence]%></div>
-	</div>
+      	<div class="panel panel-warning">
+      	  <div class="panel-heading panel-title">Worst Sentence</div>
+      	  <div class="panel-body"><%= @dashboard[:worst_sentence]%></div>
+      	</div>
       </div>
     </div>
   </div>
 </div>
 
 <div class="panel panel-default">
-  <div class="panel-heading panel-title">User Data</div>
+  <div class="panel-heading panel-title">Reviewer Location Data<div class="toggle pull-right"><i class="fa fa-toggle-on"></i></div></div>
   <div class="panel-body row-centered">
     <div id="user-data-panel" class="col-centered">
-      <input id="user-data-button" type="button" value="Click here for user data">
+      <input id="user-data-button" class="btn btn-default" type="button" value="Click here to see location data">
+    </div>
+  </div>
+  <div id="graph1" style="display:none;">
+    <div class="panel-body row-centered" >
+      <%= render 'map' %>
     </div>
   </div>
 </div>
 
-<div id="graph1" class="panel panel-default" style="display:none;">
-  <div class="panel-heading panel-title">User Map</div>
-  <div class="panel-body row-centered" >
-    <%= render 'map' %>
-  </div>
-</div>
-
 <div class="panel panel-default">
-  <div class="panel-heading panel-title">Rating Over Time</div>
+  <div class="panel-heading panel-title">Average Product Rating Over Time<div class="toggle pull-right"><i class="fa fa-toggle-on"></i></div></div>
     <div id="graph" class="panel-body row-centered">
       <%= render 'graph' %>
     </div>
 </div>
 
 <div class="panel panel-default">
-  <div class="panel-heading panel-title">Sentiment comparison</div>
+  <div class="panel-heading panel-title">Sentiment Analysis<div class="toggle pull-right"><i class="fa fa-toggle-on"></i></div></div>
     <div id="graph" class="panel-body">
       <div class="row">
         <div class="col-md-6">
@@ -80,3 +85,13 @@
       </div>
     </div>
 </div>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $("div.toggle").click(function(){
+      $(this).parent().parent().find('.panel-body').slideToggle(100, function(){
+        $(this).parent().find('i').toggleClass('fa-toggle-off').toggleClass('fa-toggle-on');
+      });
+    });
+  });
+</script>
