--- a/app/views/search/_footer.html.erb
+++ b/app/views/search/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer navbar-fixed-bottom">
   <div class="container">
     <p class="text-muted">
       &copy; Copyright 2015
