--- a/app/views/products/_dashboard.html.erb
+++ b/app/views/products/_dashboard.html.erb
@@ -1,7 +1,3 @@
-
-<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-
 <div class="panel panel-default">
   <div class="panel-body">
     <div class="row">
@@ -16,6 +12,20 @@
         <h5>Manufactured by <strong><%= @product.manufacturer %></strong></h5>
       </div>
     </div>
+  </div>
+</div>
+
+<div class="panel panel-default">
+  <div class="panel-heading panel-title">Reviewer Location Data<div class="toggle pull-right"><i class="fa fa-toggle-on"></i></div></div>
+    <div class="panel-body row-centered">
+      <div id="user-data-panel" class="col-centered">
+        <input id="user-data-button" class="btn btn-default" type="button" value="Click here to see location data">
+      </div>
+    </div>
+    <div id="graph1" style="display:none;">
+      <div class="panel-body row-centered" >
+        <%= render 'map' %>
+      </div>
   </div>
 </div>
 
@@ -52,27 +62,6 @@
 </div>
 
 <div class="panel panel-default">
-  <div class="panel-heading panel-title">Reviewer Location Data<div class="toggle pull-right"><i class="fa fa-toggle-on"></i></div></div>
-  <div class="panel-body row-centered">
-    <div id="user-data-panel" class="col-centered">
-      <input id="user-data-button" class="btn btn-default" type="button" value="Click here to see location data">
-    </div>
-  </div>
-  <div id="graph1" style="display:none;">
-    <div class="panel-body row-centered" >
-      <%= render 'map' %>
-    </div>
-  </div>
-</div>
-
-<div class="panel panel-default">
-  <div class="panel-heading panel-title">Average Product Rating Over Time<div class="toggle pull-right"><i class="fa fa-toggle-on"></i></div></div>
-    <div id="graph" class="panel-body row-centered">
-      <%= render 'graph' %>
-    </div>
-</div>
-
-<div class="panel panel-default">
   <div class="panel-heading panel-title">Sentiment Analysis<div class="toggle pull-right"><i class="fa fa-toggle-on"></i></div></div>
     <div id="graph" class="panel-body">
       <div class="row">
@@ -83,6 +72,13 @@
           <%= render 'graph_sentiment_pie' %>
         </div>
       </div>
+    </div>
+</div>
+
+<div class="panel panel-default">
+  <div class="panel-heading panel-title">Average Product Rating Over Time<div class="toggle pull-right"><i class="fa fa-toggle-on"></i></div></div>
+    <div class="panel-body row-centered">
+      <%= render 'chart' %>
     </div>
 </div>
 
